--- a/src/components/style/nav.css
+++ b/src/components/style/nav.css
@@ -5,12 +5,19 @@
 }
 
 nav {
-  width: 100%;
+  background-color: #fafafa;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  padding: 1rem 6rem;
   margin: 5px 0;
   margin-bottom: 2rem;
+  gap: 5rem;
+  box-shadow: -1px 2px 0 -1px #e8e8e8;
+}
+
+nav h1 {
+  color: #0290ff;
 }
 
 ul {
@@ -19,10 +26,10 @@ ul {
   gap: 20px;
 }
 
-li {
+ul a {
   text-decoration: none;
 }
 
-li:hover {
+nav li:hover {
   font-size: large;
 }
